kubernetes/map_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: map-gateway
  namespace: ktbbackend
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: map-backend
spec:
  hosts:
  - "*"
  gateways:
  - map-gateway
  http:
  - match:        
    - uri:
        prefix: /mapping
    - uri:
        prefix: /getmap
    route:
    - destination:
        host: mappingrest
        port:
          number: 8080
